# battaglia-navale

./: .gitignore  CMakeLists.txt  Log-CC-1000mosse.txt  Log-CC-150mosse.txt  Log-CC-20mosse.txt  Log-PC-HumanWin.txt  README.md  build.sh  log-CC-20230118_000220.txt  log-CC-20230118_000451.txt  log-CC-20230118_180049.txt  main_build.sh  replay_build.sh  test_correct_output_from_replay.txt  test_game.txt  test_log.txt
include/: Nave.h  battleship.h  board.h  coordinate.h  ship.h
include/board/: attackboard.h  board.h  defenseboard.h
include/coordinate/: coordinate.h
include/player/: cpuplayer.h  humanplayer.h  player.h
include/ship/: battleship.h  repairship.h  ship.h  submarine.h
include/utils/: colors.h
src/: battaglia_navale.cpp  battleship.cpp  coordinate.cpp  main.cpp  replay.cpp  ship.cpp
src/board/: attackboard.cpp  board.cpp  defenseboard.cpp
src/coordinate/: coordinate.cpp
src/player/: cpuplayer.cpp  humanplayer.cpp  player.cpp
src/ship/: battleship.cpp  repairship.cpp  ship.cpp  submarine.cpp
